refactor: created responsive adaptive for sectiom about-me

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </section>    
-    <!-- <section class="about-me" id="aboutMe">
+    <section class="about-me" id="aboutMe">
             <div class="container">
                 <h6 class="visually-hidden"></h6>
                 <div class="about-me__content">
@@ -106,7 +106,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     <!-- <section class="my-skills" id="skills">
             <div class="container"></div>
             <div class="my-skills__content">
