fix: created responsive adaptive section my-works

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 </div>
             </div>
         </section>
-    <!-- <section class="my-works" id="petProjects">
+    <section class="my-works" id="petProjects">
             <div class="container">
                 <div class="my-works__content">
                     <div class="wrapper-context-title">
@@ -275,7 +275,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
     <!-- <section class="review" id="review">
             <div class="container">
                 <div class="review__content">
