feat: add title for section review

--- a/index.html
+++ b/index.html
@@ -276,10 +276,12 @@
                 </div>
             </div>
         </section>
-    <!-- <section class="review" id="review">
+    <section class="review" id="review">
             <div class="container">
                 <div class="review__content">
-
+                    <div class="wrapper-context-title">
+                        <h6 class="context-title">Reviews</h6>
+                    </div>
                     <div class="slider-review">
                         <div class="slider-review__slide">
                             <div class="slider-review__top">
@@ -316,7 +318,7 @@
 
                 </div>
             </div>
-        </section> -->
+        </section>
     <!-- <section class="contact-form" id="contacts">
             <div class="container">
                 <div class="contact-form__content">
