feat: created responsive adaptive for form

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 </div>
             </div>
         </section>
-    <!-- <section class="contact-form" id="contacts">
+    <section class="contact-form" id="contacts">
             <div class="container">
                 <div class="contact-form__content">
                     <form class="form" method="post" action="./php/mail.php" id="form">
@@ -344,7 +344,7 @@
 
                 </div>
             </div>
-        </section> -->
+        </section>
     <!-- <footer class="footer">
         <div class="container">
             <div class="footer__content">
