--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                 </div>
             </div>
         </section>
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="footer__content">
                 <div class="footer__description">
@@ -423,7 +423,7 @@
                 </div>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
