feat: redactive styles anchor-links

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 <span class="social-link__description">ontalex@ya.ru</span>
                             </a>
                         </li>
-                        <li class="social-list__item">
+                        <!-- <li class="social-list__item">
                             <a href="https://github.com/ArseniySchkidina" class="social-link">
                                 <span class="social-link__img">
                                     <svg c width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -395,8 +395,8 @@
                                 </span>
                                 <span class="social-link__description">Ontalex</span>
                             </a>
-                        </li>
-                        <li class="social-list__item">
+                        </li> -->
+                        <!-- <li class="social-list__item">
                             <a href="https://vk.com/shkidina" class="social-link">
                                 <span class="social-link__img">
                                     <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -408,7 +408,7 @@
                                 </span>
                                 <span class="social-link__description">@ontalex</span>
                             </a>
-                        </li>
+                        </li> -->
                         <li class="social-list__item">
                             <a href="https://t.me/froudobaggins" class="social-link">
                                 <span class="social-link__img">
